--- a/index.html
+++ b/index.html
@@ -104,12 +104,43 @@
                         <b>50+</b><br>
                         Servers
                     </p>
-                </div> 
+                </div>
             </div>
         </div>
     </header>
 
-
+    <section class="hero">
+        <div class="container">
+            <figure>
+                <img src="./img/illustration2.png" alt="Segunda ilustracion de la empresa">
+            </figure>
+            <div class="hero-div">
+                <h2>
+                    We Provide Many
+                    Features You Can Use
+                </h2>
+                <p>
+                    You can explore the features that we provide with fun and
+                    have their own functions each feature.
+                </p>
+                <ul>
+                    <li>
+                        <i class="material-icons">check_circle</i>Powerfull online protection.
+                    </li>
+                    <li>
+                        <i class="material-icons">check_circle</i>Internet without borders.
+                    </li>
+                    <li>
+                        <i class="material-icons">check_circle</i>Supercharged VPN.
+                    </li>
+                    <li>
+                        <i class="material-icons">check_circle</i>No specific time limits.
+                    </li>
+                    
+                </ul>
+            </div>
+        </div>
+    </section>
 
 
 
