avanzando en seccion global

--- a/index.html
+++ b/index.html
@@ -136,13 +136,73 @@
                     <li>
                         <i class="material-icons">check_circle</i>No specific time limits.
                     </li>
-                    
+
                 </ul>
             </div>
         </div>
     </section>
 
+    <section class="plan">
+        <div class="container">
+            <h2>Choose your plan</h2>
+            <p>
+                Let's choose the package that is best for you and explore it happily and
+                cheerfully.
+            </p>
+            <div class="choose-plan">
+                <div class="choosed-plan">
+                    <img src="./img/free-plan.png" alt="Imagen de plan">
+                    <h3>Free Plan</h3>
 
+                    <ul>
+                        <li><i class="material-icons">done</i>Unlimited Bandwitch</li>
+                        <li><i class="material-icons">done</i>Encrypted Connection</li>
+                        <li><i class="material-icons">done</i>No Traffic Logs</li>
+                        <li><i class="material-icons">done</i>Works on All Devices</li>
+                    </ul>
+                    <h2>Free</h2>
+                    <a href="#"><span class="choosed-plan__span">Select</span></a>
+                </div>
+                <div class="choosed-plan">
+                    <img src="./img/free-plan.png" alt="Imagen de plan">
+                    <h3>Free Plan</h3>
+
+                    <ul>
+                        <li><i class="material-icons">done</i>Unlimited Bandwitch</li>
+                        <li><i class="material-icons">done</i>Encrypted Connection</li>
+                        <li><i class="material-icons">done</i>No Traffic Logs</li>
+                        <li><i class="material-icons">done</i>Works on All Devices</li>
+                    </ul>
+                    <h2>Free</h2>
+                    <a href="#"><span class="choosed-plan__span">Select</span></a>
+                </div>
+                <div class="choosed-plan">
+                    <img src="./img/free-plan.png" alt="Imagen de plan">
+                    <h3>Free Plan</h3>
+
+                    <ul>
+                        <li><i class="material-icons">done</i>Unlimited Bandwitch</li>
+                        <li><i class="material-icons">done</i>Encrypted Connection</li>
+                        <li><i class="material-icons">done</i>No Traffic Logs</li>
+                        <li><i class="material-icons">done</i>Works on All Devices</li>
+                    </ul>
+                    <h2>Free</h2>
+                    <a href="#"><span class="choosed-plan__span">Select</span></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="global">
+        <div class="container">
+            <h2>Huge Global Network of Fast VPN</h2>
+            <p>
+                See LaslesVPN everywhere to make it easier for you when you move
+                 locations.
+            </p>
+            <img src="./img/global.svg" alt="Global map">
+        </div>
+    </section>
 
 
 
