--- a/index.html
+++ b/index.html
@@ -164,29 +164,32 @@
                     <a href="#"><span class="choosed-plan__span">Select</span></a>
                 </div>
                 <div class="choosed-plan">
-                    <img src="./img/free-plan.png" alt="Imagen de plan">
-                    <h3>Free Plan</h3>
+                    <img src="./img/standar-plan.png" alt="Imagen de plan">
+                    <h3>Standard Plan</h3>
 
                     <ul>
                         <li><i class="material-icons">done</i>Unlimited Bandwitch</li>
                         <li><i class="material-icons">done</i>Encrypted Connection</li>
                         <li><i class="material-icons">done</i>No Traffic Logs</li>
                         <li><i class="material-icons">done</i>Works on All Devices</li>
+                        <li><i class="material-icons">done</i>Connect Anyware</li>
                     </ul>
-                    <h2>Free</h2>
+                    <h2>$9 <span>/ mo</span></h2>
                     <a href="#"><span class="choosed-plan__span">Select</span></a>
                 </div>
                 <div class="choosed-plan">
-                    <img src="./img/free-plan.png" alt="Imagen de plan">
-                    <h3>Free Plan</h3>
-
+                    <img src="./img/premium-plan.png" alt="Imagen de plan">
+                    <h3>Premium Plan</h3>
+                    
                     <ul>
                         <li><i class="material-icons">done</i>Unlimited Bandwitch</li>
                         <li><i class="material-icons">done</i>Encrypted Connection</li>
                         <li><i class="material-icons">done</i>No Traffic Logs</li>
                         <li><i class="material-icons">done</i>Works on All Devices</li>
+                        <li><i class="material-icons">done</i>Connect Anyware</li>
+                        <li><i class="material-icons">done</i>Get New Features</li>
                     </ul>
-                    <h2>Free</h2>
+                    <h2>$12 <span>/ mo</span></h2>
                     <a href="#"><span class="choosed-plan__span">Select</span></a>
                 </div>
             </div>
@@ -201,10 +204,19 @@
                  locations.
             </p>
             <img src="./img/global.svg" alt="Global map">
+            <div class="global-social">
+                <img class="social-media" src="./img/netflix-social.svg" alt="">
+                <img class="social-media" src="./img/reddit-social.svg" alt="">
+                <img class="social-media" src="./img/amazon-social.svg" alt="">
+                <img class="social-media" src="./img/discord-social.svg" alt="">
+                <img class="social-media" src="./img/spotify-social.svg" alt="">
+            </div>
         </div>
     </section>
 
-
+    <section class="testimonial">
+        
+    </section>
 
     <footer>
         <p>sd</p>
