Pagina en pantalla grande completa

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="choosed-plan">
                     <img src="./img/premium-plan.png" alt="Imagen de plan">
                     <h3>Premium Plan</h3>
-                    
+
                     <ul>
                         <li><i class="material-icons">done</i>Unlimited Bandwitch</li>
                         <li><i class="material-icons">done</i>Encrypted Connection</li>
@@ -189,7 +189,7 @@
                         <li><i class="material-icons">done</i>Connect Anyware</li>
                         <li><i class="material-icons">done</i>Get New Features</li>
                     </ul>
-                    <h2>$12 <span>/ mo</span></h2>
+                    <h2 class="choosed-plan__h2">$12 <span>/ mo</span></h2>
                     <a href="#"><span class="choosed-plan__span">Select</span></a>
                 </div>
             </div>
@@ -201,7 +201,7 @@
             <h2>Huge Global Network of Fast VPN</h2>
             <p>
                 See LaslesVPN everywhere to make it easier for you when you move
-                 locations.
+                locations.
             </p>
             <img src="./img/global.svg" alt="Global map">
             <div class="global-social">
@@ -215,11 +215,137 @@
     </section>
 
     <section class="testimonial">
-        
+        <div class="container">
+
+            <h2>Trusted by Thousands of Happy Customer</h2>
+            <p>
+                These are the stories of our customers who have joined us with great pleasure when using this crazy
+                feature.
+            </p>
+
+            <div class="testimonial-div">
+                <div class="testimonial-card">
+                    <div class="card-up">
+                        <img src="./img/testimonial-customer1.png" alt="Foto de un cliente">
+                        <p>
+                            Viezsh Robert<br>
+                            <span>Warsaw, Poland</span>
+                        </p>
+                        <p class="card-up__p">4.5<span class="card-up__span"></span></p>
+                    </div>
+                    <div class="card-down">
+                        <p>
+                            “Wow... I am very happy to use this VPN, it
+                            turned out to be more than my expectations
+                            and so far there have been no problems.
+                            LaslesVPN always the best”.
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="card-up">
+                        <img src="./img/testimonial-customer1.png" alt="Foto de un cliente">
+                        <p>
+                            Viezsh Robert<br>
+                            <span>Warsaw, Poland</span>
+                        </p>
+                        <p class="card-up__p">4.5<span class="card-up__span"></span></p>
+                    </div>
+                    <div class="card-down">
+                        <p>
+                            “Wow... I am very happy to use this VPN, it
+                            turned out to be more than my expectations
+                            and so far there have been no problems.
+                            LaslesVPN always the best”.
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="card-up">
+                        <img src="./img/testimonial-customer1.png" alt="Foto de un cliente">
+                        <p>
+                            Viezsh Robert<br>
+                            <span>Warsaw, Poland</span>
+                        </p>
+                        <p class="card-up__p">4.5<span class="card-up__span"></span></p>
+                    </div>
+                    <div class="card-down">
+                        <p>
+                            “Wow... I am very happy to use this VPN, it
+                            turned out to be more than my expectations
+                            and so far there have been no problems.
+                            LaslesVPN always the best”.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <footer>
-        <p>sd</p>
+        <div class="container">
+            <div class="footer-over">
+                <div class="over-text">
+                    <h2>
+                        Subscribe Now for
+                        Get Special Features!
+                    </h2>
+                    <p>Subscribe Now for Get Special Features!</p>
+                </div>
+                <a href="#"><span class="footer-over__span">Suscribe Now</span></a>
+            </div> 
+            <div class="footer-div">
+                <div class="footer-social">
+                    <img src="./img/logo.svg" alt="Logo de la empresa">
+                    <p>
+                        LaslesVPN is a private virtual network that
+                        has unique features and has high security.
+                    </p>
+                    <div class="footer-div-social">
+                        <span class="material-icons">
+                            catching_pokemon
+                        </span>
+                        <span class="material-icons">
+                            facebook
+                        </span>
+                        <span class="material-icons">
+                            whatshot
+                        </span>
+                    </div>
+                    <p class="footer-social__p">©2020LaslesVPN</p>
+                </div>
+                <div class="footer-list">
+                    <p>Product</p>
+                    <ul>
+                        <li><a href="#"><span>Download</span></a></li>
+                        <li><a href="#"><span>Pricing</span></a></li>
+                        <li><a href="#"><span>Locations</span></a></li>
+                        <li><a href="#"><span>Server</span></a></li>
+                        <li><a href="#"><span>Countries</span></a></li>
+                        <li><a href="#"><span>Blog</span></a></li>
+                    </ul>
+                </div>
+                <div class="footer-list">
+                    <p>Engage</p>
+                    <ul>
+                        <li><a href="#"><span>LaslesVPN ?</span></a></li>
+                        <li><a href="#"><span>FAQ</span></a></li>
+                        <li><a href="#"><span>Tutorials</span></a></li>
+                        <li><a href="#"><span>About Us</span></a></li>
+                        <li><a href="#"><span>Privacy Policy</span></a></li>
+                        <li><a href="#"><span>Terms of Service</span></a></li>
+                    </ul>
+                </div>
+                <div class="footer-list">
+                    <p>Earn Money</p>
+                    <ul>
+                        <li><a href="#"><span>Affiliate</span></a></li>
+                        <li><a href="#"><span>Become a Partner</span></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
