--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <li><i class="material-icons">done</i>Connect Anyware</li>
                         <li><i class="material-icons">done</i>Get New Features</li>
                     </ul>
-                    <h2 class="choosed-plan__h2">$12 <span>/ mo</span></h2>
+                    <h2>$12 <span>/ mo</span></h2>
                     <a href="#"><span class="choosed-plan__span">Select</span></a>
                 </div>
             </div>
