--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasles</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
@@ -75,7 +75,7 @@
                 </div>
                 <figure>
                     <img src="./img/illustration1.png" alt="Imagen de empresa">
-                </figure>
+                </figure> 
             </div>
             <div class="header-table">
                 <div class="table-data">
@@ -109,7 +109,7 @@
         </div>
     </header>
 
-    <section class="hero">
+    <!-- <section class="hero">
         <div class="container">
             <figure>
                 <img src="./img/illustration2.png" alt="Segunda ilustracion de la empresa">
@@ -140,9 +140,9 @@
                 </ul>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="plan">
+    <!-- <section class="plan">
         <div class="container">
             <h2>Choose your plan</h2>
             <p>
@@ -194,9 +194,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="global">
+    <!-- <section class="global">
         <div class="container">
             <h2>Huge Global Network of Fast VPN</h2>
             <p>
@@ -212,9 +212,9 @@
                 <img class="social-media" src="./img/spotify-social.svg" alt="">
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="testimonial">
+    <!-- <section class="testimonial">
         <div class="container">
 
             <h2>Trusted by Thousands of Happy Customer</h2>
@@ -281,9 +281,9 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
 
-    <footer>
+    <!-- <footer>
         <div class="container">
             <div class="footer-over">
                 <div class="over-text">
@@ -346,7 +346,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
