Header y hero terminados

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </figure> 
             </div>
             <div class="header-table">
-                <div class="table-data">
+                <div class="table-data table-data-back">
                     <span class="icon-behavior">
                         <i class="material-icons">account_circle</i>
                     </span>
@@ -109,7 +109,7 @@
         </div>
     </header>
 
-    <!-- <section class="hero">
+    <section class="hero">
         <div class="container">
             <figure>
                 <img src="./img/illustration2.png" alt="Segunda ilustracion de la empresa">
@@ -140,7 +140,7 @@
                 </ul>
             </div>
         </div>
-    </section> -->
+    </section> 
 
     <!-- <section class="plan">
         <div class="container">
