--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <figure>
                     <img src="./img/illustration1.png" alt="Imagen de empresa">
-                </figure> 
+                </figure>
             </div>
             <div class="header-table">
                 <div class="table-data table-data-back">
@@ -140,9 +140,9 @@
                 </ul>
             </div>
         </div>
-    </section> 
+    </section>
 
-    <!-- <section class="plan">
+    <section class="plan">
         <div class="container">
             <h2>Choose your plan</h2>
             <p>
@@ -194,9 +194,9 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="global">
+    <section class="global">
         <div class="container">
             <h2>Huge Global Network of Fast VPN</h2>
             <p>
@@ -212,9 +212,9 @@
                 <img class="social-media" src="./img/spotify-social.svg" alt="">
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="testimonial">
+    <section class="testimonial">
         <div class="container">
 
             <h2>Trusted by Thousands of Happy Customer</h2>
@@ -281,20 +281,11 @@
             </div>
 
         </div>
-    </section> -->
+    </section>
 
-    <!-- <footer>
+    <footer>
         <div class="container">
-            <div class="footer-over">
-                <div class="over-text">
-                    <h2>
-                        Subscribe Now for
-                        Get Special Features!
-                    </h2>
-                    <p>Subscribe Now for Get Special Features!</p>
-                </div>
-                <a href="#"><span class="footer-over__span">Suscribe Now</span></a>
-            </div> 
+            
             <div class="footer-div">
                 <div class="footer-social">
                     <img src="./img/logo.svg" alt="Logo de la empresa">
@@ -344,9 +335,9 @@
                         <li><a href="#"><span>Become a Partner</span></a></li>
                     </ul>
                 </div>
-            </div>
+            </div> 
         </div>
-    </footer> -->
+    </footer> 
 </body>
 
 </html>
